rename atom scopes to landau-viewer to prevent overlap

--- a/styles/landau-viewer.less
+++ b/styles/landau-viewer.less
@@ -4,11 +4,11 @@
 // for a full listing of what's available.
 @import "ui-variables";
 
-.jscad-viewer {
+.landau-viewer {
   display: flex;
   flex-direction: column;
 
-  .jscad-viewer-viewer {
+  .landau-viewer-viewer {
     display: flex;
     flex-direction: column;
     flex: 1;
